bundle install, pushing to heroku

--- a/app/views/layouts/_spotlight.html.erb
+++ b/app/views/layouts/_spotlight.html.erb
@@ -15,6 +15,9 @@ Etiam blandit ante sit amet scelerisque eleifend. Morbi consectetur dictum est a
 
 <p>Thanks for reading! -Ryan</p>
 
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<div class="addthis_sharing_toolbox"></div>
+
 </div>
 
 </div>
