--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,10 @@
 
 </br>
 
- <button class="btn btn-info btn-lg" type="button">Share Your Story</button>
-<%= link_to "View Today's Spotlights", pages_spotlights_path, class: "btn btn-default btn-lg" %>
+
+<%= link_to "Share Your Story", new_user_registration_path, class: "btn btn-info btn-lg" %>
+<%= link_to "View Today's Spotlights", thoughts_path, class: "btn btn-default btn-lg" %>
+
 
   </div>
 
