--- a/app/views/thoughts/new.html.erb
+++ b/app/views/thoughts/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New thought</h1>
+<div class="container">
+<h1>Share your story for a chance to be in the spotlight.</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', thoughts_path %>
+
+</div>
